[package]
name = "code_to_html"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
chrono = "0.4.31"
